# hnet

./: .gitignore  README.md  count_dataset_tokens.py  estimate_epoch_steps.py  estimate_sft_epoch_steps.py  generate.py  generate_sft.py  inspect_chunking.py  plot_training_log.py  plot_validation_log.py  prepare_packed_dataset.py  pyproject.toml  train.py
configs/: hnet_1stage_100m.json  hnet_2stage_200m.json  hnet_2stage_200m_M1T1M24.json  hnet_2stage_200m_m1t1m24.json  hnet_2stage_200m_t1.json  hnet_2stage_200m_t1m4.json
eval_configs/: colab_no_codegen.yaml  config_hnet_online.yaml
hnet/: __init__.py
hnet/models/: __init__.py  config_hnet.py  config_io.py  hnet.py  mixer_seq.py
hnet/modules/: dc.py  isotropic.py  mha.py  rotary.py
hnet/sft/: __init__.py  data.py  dataset.py  epoch_steps.py  inspect_training_inputs.py  train.py  trainer.py
hnet/sft/configs/: default.json  no_tool.json  no_tool_jamard.json  no_tool_no_code.json  no_tool_no_code_v2.json  no_tool_no_code_v3.json  no_tool_no_code_v4.json  no_tool_no_code_v5.json  no_tool_no_code_v6.json  no_tool_no_code_v7.json  no_tool_no_code_v8.json  no_tool_no_code_v9.json  no_tool_v10.json  no_tool_v11.json  no_tool_v12.json  no_tool_v13.json
hnet/training/: __init__.py  chunking_utils.py  config.py  data.py  dataset_template.py  record_formatter.py  trainer.py
hnet/utils/: __init__.py  train.py
scripts/: eval_gsm8k_ja_openai.py  hnet_openai_server.py  make_auto_wiki_fewshot_fields.py  make_select_dataset.py
tests/unit/training/: test_data.py
