[project]
name = "hnet"
version = "0.0.1"
description = "H-Net"
authors = [
    { name = "Sukjun Hwang", email = "sukjunh@cs.cmu.edu" },
    { name = "Brandon Wang", email = "brandon.wang@cartesia.ai"},
    { name = "Albert Gu", email = "agu@cs.cmu.edu" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.5.1",
    "triton>=3.2.0",
    "mamba_ssm @ git+https://github.com/state-spaces/mamba.git@b6b83f2d955fa05bb4e9e571e5c3243216408cc4",
    "flash_attn==2.8.0.post2",
    "causal_conv1d @ git+https://github.com/Dao-AILab/causal-conv1d.git@e940ead2fd962c56854455017541384909ca669f",
    "datasets>=3.0.0",
    "einops",
    "optree",
    "regex",
    "omegaconf",
    "transformers>=4.46.0",
    "accelerate>=0.34.0",
    "rich>=13.9.0",
    "matplotlib>=3.9.0",
]
[project.urls]
Repository = "https://github.com/goombalab/hnet"

[tool.setuptools.packages.find]
where = ["."]
include = ["hnet*"]
exclude = ["tests*"]

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"
